# AileEx

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: package-release.yml
docs/: architecture.md  build.md  cleanup-candidates-2026-05-05.md  code-quality-audit.md  known-issues.md  menu-pending.md  review-2026-05-05.md  roadmap.md  specification.md
res/: AileEx.rc  manifest.xml
sdk/7zip/: IDecl.h  IPassword.h  IProgress.h  IStream.h  PropID.h  compat.h
sdk/7zip/Archive/: IArchive.h
src/: AdvancedCompressDlg.cpp  AdvancedCompressDlg.h  App.cpp  App.h  ArchiveItem.h  CompressDlg.cpp  CompressDlg.h  DialogUtils.h  InfoDlg.cpp  InfoDlg.h  MainWindow.cpp  MainWindow.h  ProgressDlg.cpp  ProgressDlg.h  RarProcess.cpp  RarProcess.h  Settings.cpp  Settings.h  SettingsDlg.cpp  SettingsDlg.h  SevenZip.cpp  SevenZip.h  UnrarDll.cpp  UnrarDll.h  WorkerThread.cpp  WorkerThread.h  main.cpp  resource.h
